syntax = "proto3";
package order;

option go_package = "pb/order";

import "google/protobuf/Empty.proto";

service OrderService {
    rpc CheckoutOrder (CheckoutOrderRequest) returns (CheckoutOrderResponse);
    rpc PayOrder (PayOrderRequest) returns (google.protobuf.Empty);
}

message PayOrderRequest {
    string order_id = 1;
    int64 user_id = 2;
}

message CheckoutOrderRequest {
    int64 user_id = 1;
    int64 payment_id = 2;
    int64 voucher_id = 3;
}
message CheckoutOrderResponse {
    string order_id = 1;
    repeated Product products = 2;
    int64 payment_id = 3;
    Payment payment = 4;
    int64 voucher_id = 5;
    Voucher voucher = 6;
    double total_price = 7;
    string order_status = 8;
    string order_date = 9;
}

message Payment {
    string payment_name = 1;
}
message Voucher {
    string voucher_name = 1;
}

message Product {
    int64 product_id = 1;
    string product_name = 2;
    int64 quantity = 3;
    double price = 4;
    double sub_total_price = 5;
}