syntax = "proto3";
package product;

option go_package = "pb/product";

import "google/protobuf/Empty.proto";

service ProductService {
    rpc GetAllProduct (google.protobuf.Empty) returns (ProductResponses);
    rpc GetProduct (ProductId) returns (ProductResponse);
    rpc AddProduct (ProductRequest) returns (ProductResponse);
    rpc DeleteProduct (ProductId) returns (google.protobuf.Empty);
    rpc UpdateProduct (ProductRequest) returns (ProductResponse);
}

message ProductId {
    int64 product_id = 1;
}

message ProductResponses {
    repeated ProductResponse products = 1;
}

message ProductResponse {
    int64 product_id = 1;
    int64 category_id = 2;
    string name = 3;
    string description = 4;
    int64 stock = 5;
    double price = 6;
}

message ProductRequest {
    int64 category_id = 1;
    string name = 2;
    string description = 3;
    int64 stock = 4;
    double price = 5;
}